# pi-pico-midi

./: Cargo.toml
.cargo/: config
src/: main.rs
