[package]
name = "midi-guitar"
version = "0.1.0"
authors = ["Eric Wood <eric@ericwood.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.6.0"
embedded-hal = "0.2.7"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
panic-halt = "0.2.0"